<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_filter_list_30dp"
        android:title="@string/filter_by_location"
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/menuItem1"
                android:icon="@drawable/ic_domain_black_24dp"
                android:title="@string/filter_by_location"
                app:showAsAction="never" />
            <item
                android:id="@+id/menuItem2"
                android:icon="@drawable/ic_date_range_black_24dp"
                android:title="@string/filter_by_date"
                app:showAsAction="never" />
            <item
                android:id="@+id/menuItem3"
                android:icon="@drawable/ic_delete_30dp"
                android:title="@string/clear_filter"
                app:showAsAction="never" />
        </menu>
    </item>


</menu>